# Pacman

./: CMakeLists.txt  LICENSE  Makefile  README.md  README.txt  install.sh  main.c  pacman
res/levels/: level01.txt  level02.txt  level03.txt
src/: ai.c  api.c  draw.c  entity.c  game.c  level.c  sdl_playground.c
src/lib/: ai.h  api.h  draw.h  entity.h  game.h  level.h  sdl_playground.h
